# image_ops

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/: manage.py
src/compression/: pipeline.py
src/data_packer/: common.py  packer.py  unpacker.py
src/deduplicate/: prepare_data.py  prepare_data_.py
src/labelme/: clear_image_data.py
src/utils/: logger.py  readers.py  references.py
